- Cottage cheese mixing bowl recipe added (vinegar + pasteruized milk)
- Fruit bread and muffin overlays fixed
- Cured deluxe sausage recipes fixed - DONE!!!
- Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes - DONE!!!
- Candle recipes updated
- Cider/wine adjusted to have half nutrition but last 10 times as long - DONE!!!
- New 1.20 clays integrated
- Fish nutrition adjusted to match vanilla

- Cooked veggies can be added to salad
- Sausage shapes have textures, should fix crashing

Vityuri suggestions:
- Cooked pasta in stews, and broth in hot pasta
- Pickled and cooked vegetable for required ingredients in soup. Many cuisines have preserved pickled vegetable in soup. Like sichuan fish soup with pickled mustard greens, polish pickle soup.
- Fried meat, dried fruit, cooked vegetables, and broth in pilaf. There are so many types of pilaf, and it is often rice mixed with cooked food. Food on rice is a staple dish in many places, maybe have it a mixing meal (?)
- Cooked meat, vegetables as pie filling. Also boiled and pickled eggs in pies. Sliced boiled eggs are used in curry puff too.
- Eggs and also cooked vegetables in dumplings. Scrambled eggs and chinese chives are a common filling in dumplings.
- Eggs and soy sauce in porridge. Few drops of that can be added when eating congee, a type of porridge.
- Peanut sauce, cooked vegetables in salads
- Grubs can be added as optional protein in some food like dumplings and meals like porridge.
- Fried grubs and termites
- Fried dumplings. Adding toppings on cooked dumplings like how breaded food has the deluxe version.
- Egg pudding and bread pudding  (optional alcohol)


1.7.2
- Fruit bar textures fixed
- Aged meat hangs on meat hooks properly
- Sunflower and acorn bread crumbs have textures in small trough
- Liquid patches use 'add' instead of 'addmerge' to avoid double transitionProps

1.7.1
- Bread crumbs can go into troughs properly