@@ -77,7 +77,7 @@
 				"expandedfoods:saltedmeatnugget-poultry-raw": {saturation: 55, foodcategory: "Protein"},
 				"expandedfoods:saltedmeatnugget-redmeat-raw": {saturation: 80, foodcategory: "Protein"},
 				"expandedfoods:saltedmeatnugget-bushmeat-raw": {saturation: 35, foodcategory: "Protein"},
-				"expandedfoods:fishnugget-raw": {saturation: 110, foodcategory: "Protein"},
+				"expandedfoods:fishnugget-raw": {saturation: 55, foodcategory: "Protein"},
 				"expandedfoods:fishnugget-curedchopped": {saturation: 85, foodcategory: "Protein"},
 				"expandedfoods:crabnugget-raw": {saturation: 65, foodcategory: "Protein"},
 				"expandedfoods:snakenugget-raw": {saturation: 75, foodcategory: "Protein"},
