@@ -9,7 +9,7 @@
 			"game:salt": {saturation: 10, health: 0.5, foodcategory: "Grain"},
 			"game:grain-rice": {saturation: 200, foodcategory: "Grain"},
 			"game:pickledvegetable-cabbage": {saturation: 310, foodcategory: "Vegetable"},
-			"expandedfoods:driedseaweed": {saturation: 100, foodcategory: "Vegetable"},
+			"expandedfoods:driedseaweed-edible": {saturation: 100, foodcategory: "Vegetable"},
 			"expandedfoods:choppedvegetable-cabbage": {saturation: 460, foodcategory: "Vegetable"},
 			"expandedfoods:choppedvegetable-pickledcarrot": {saturation: 125, foodcategory: "Vegetable"},
 			"expandedfoods:choppedvegetable-pickledonion": {saturation: 125, foodcategory: "Vegetable"},
