@@ -17,7 +17,7 @@
   			scale: 0.75
 		},
     	"expandedNutritionProps": {
-			"expandedfoods:fishnugget-raw": {saturation: 240, foodcategory: "Protein"},
+			"expandedfoods:fishnugget-raw": {saturation: 115, foodcategory: "Protein"},
 			"game:fat": {saturation: 200, foodcategory: "Protein"},
 			"expandedfoods:lard" : {saturation: 8, "health":  0.05, foodcategory: "Protein"},
 			"game:cheese-cheddar-1slice" : { saturation: 240, foodcategory: "Dairy" },
