@@ -77,7 +77,10 @@ NEW FOOD ADDITIONS FINALLY???
 - Candle recipes updated
 - Cider/wine adjusted to have half nutrition but last 10 times as long - DONE!!!
 - New 1.20 clays integrated
-- Fish nutrition adjusted to match vanilla
+- Raw fish nutrition adjusted to match vanilla - DONE!!!
+- Seaweed patch fixed
+- Seaweed nutrition works in sushi - DONE!!!
+- Chef hat + saddle makes Chef Saddle
 
 - Cooked veggies can be added to salad
 - Sausage shapes have textures, should fix crashing
